# still

./: AGENTS.md  Cargo.toml  README.md  package.json
.github/workflows/: codeql.yml  release.yml
apps/api/: Cargo.toml  package.json
apps/api/src/: main.rs
apps/cli/: AGENTS.md  Cargo.toml  demo.cast  install.sh  package.json  tui.cast
apps/cli/core/: Cargo.toml  archive.rs  lib.rs  resolver.rs
apps/cli/core/commands/: install.rs
apps/cli/crates/engine/: Cargo.toml  lib.rs  mod.rs  system.rs
apps/cli/crates/engine/actions/: install.rs  uninstall.rs
apps/cli/crates/engine/platform/: mod.rs
apps/cli/crates/engine/platform/policy/: install.rs  mod.rs  paths.rs  system.rs  uninstall.rs
apps/cli/crates/engine/registries/: mod.rs
apps/cli/crates/engine/registries/asdf/: resolve.rs
apps/cli/crates/engine/registries/cargo/: client.rs  mod.rs  resolve.rs
apps/cli/crates/engine/registries/homebrew/: fetch.rs  resolve.rs
apps/cli/crates/engine/registries/macports/: fetch.rs  mod.rs  resolve.rs
apps/cli/crates/engine/registries/nix/: client.rs  fetch.rs  resolve.rs
apps/cli/crates/engine/registries/npm/: client.rs  fetch.rs  resolve.rs
apps/cli/crates/engine/registries/pkgsrc/: fetch.rs  mod.rs  resolve.rs
apps/cli/crates/engine/registries/scoop/: mod.rs  resolve.rs
apps/cli/crates/engine/specs/: tool.rs
apps/cli/crates/engine/utils/: archive.rs  fs.rs  link.rs  mod.rs  paths.rs
apps/cli/crates/frontend/: Cargo.toml
apps/cli/crates/frontend/cli/: args.rs  commands.rs  install.rs  output.rs
apps/cli/crates/frontend/tui/: app.rs
apps/cli/crates/frontend/tui/tabs/: mod.rs
apps/cli/crates/frontend/tui/tabs/formula/: formula.rs
apps/cli/crates/registries/: Cargo.toml  mod.rs
apps/cli/crates/registries/asdf/: client.rs  fetch.rs  mod.rs
apps/cli/crates/registries/cargo/: fetch.rs
apps/cli/crates/registries/homebrew/: client.rs  fetch.rs  mod.rs  resolve.rs
apps/cli/crates/registries/macports/: client.rs
apps/cli/crates/registries/mas/: client.rs  fetch.rs  mod.rs  resolve.rs
apps/cli/crates/registries/nix/: mod.rs
apps/cli/crates/registries/npm/: mod.rs
apps/cli/crates/registries/pkgsrc/: client.rs
apps/cli/crates/registries/scoop/: client.rs  fetch.rs
apps/cli/crates/system/: Cargo.toml  lib.rs  platform.rs  system.rs
apps/cli/crates/system/utils/: fs.rs  hashing.rs  install.rs  mod.rs  net.rs  paths.rs  uninstall.rs
apps/cli/crates/ui/: Cargo.toml
apps/cli/crates/ui/cli/: args.rs  commands.rs  mod.rs  output.rs  runtime.rs
apps/cli/crates/ui/cli/commands/: install.rs  mod.rs
apps/cli/crates/ui/tui/: app.rs
apps/cli/crates/ui/tui/components/: interactive_cli.rs
apps/cli/crates/ui/tui/tabs/formula/: formula.rs  mod.rs
apps/cli/crates/util/: Cargo.toml  fs.rs
apps/cli/examples/: still.schema.json  still.toml  still.tool.toml  x.json
apps/cli/frontend/: Cargo.toml
apps/cli/frontend/cli/: args.rs  commands.rs  install.rs  mod.rs
apps/cli/frontend/tui/: app.rs  mod.rs
apps/cli/frontend/tui/components/: action_menu.rs
apps/cli/frontend/tui/tabs/formula/: formula.rs
apps/cli/frontend/tui/tabs/resources/: resources.rs
apps/cli/sources/: Cargo.toml  ghcr.rs  homebrew.rs  local.rs  mod.rs
apps/cli/src/: cli.rs  homebrew.rs  install_utils.rs  main.rs
apps/cli/src/commands/: add.rs  convert.rs  doctor.rs  init.rs  install.rs  mod.rs  translate.rs  use_cmd.rs
apps/cli/src/specs/: brew.rs  mod.rs  tool.rs
apps/cli/src/tui/: app.rs  mod.rs
apps/cli/src/tui/components/: mod.rs  popup.rs
apps/cli/src/tui/tabs/: formula.rs
apps/cli/src/tui/tabs/config/: mod.rs
apps/cli/src/tui/tabs/logs/: mod.rs
apps/cli/src/tui/tabs/resources/: mod.rs
apps/cli/src/tui/tabs/tasks/: mod.rs
apps/cli/tests/: cli_help.rs
apps/cli/util/: Cargo.toml  fs.rs  mod.rs
apps/docs/: AGENTS.md  package.json
apps/web/: package.json  svelte.config.js
examples/: example.lua  example.toml  print.lua
src/: cli.rs  main.rs
src/commands/: install.rs  mod.rs  remove.rs  run.rs  translate.rs  uninstall.rs
src/specs/: tool_with_version.rs
src/tui/: app.rs  mod.rs
test_toml/: bun.toml
