[package]
name = "still"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
semver = "1.0.27"
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
