[workspace]
members = [
  "crates/engine",
  "crates/ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "still"
version.workspace = true
edition.workspace = true

[dependencies]
engine = { path = "crates/engine" }
ui = { path = "crates/ui" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"
