[package]
name = "still"
version.workspace = true
edition.workspace = true

[[bin]]
name = "still_s"
path = "src/main.rs"

[workspace]
members = ["crates/engine", "crates/ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
engine = { path = "crates/engine" }
ui = { path = "crates/ui", default-features = false }

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
insta = "1.44.1"

[features]
default = []
tui = ["ui/tui"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
