[package]
name = "engine"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["fs"] }
flate2 = "1.1.5"
tar = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
semver = "1.0.27"
reqwest = { version = "0.13.1", features = [
  "json",
  "gzip",
  "brotli",
  "deflate",
  "rustls",
] }
dirs = "6.0.0"
urlencoding = "2.1.3"
sha2 = "0.10.9"
anyhow = "1.0.100"
