[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
engine = { path = "../engine" }
registries = { path = "../registries" }
util = { path = "../util" }
clap = { version = "4.5.53", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.148"
