[package]
name = "registries"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
engine = { path = "../engine" }
system = { path = "../system" }
reqwest = { version = "0.13", features = [
  "json",
  "gzip",
  "brotli",
  "deflate",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
urlencoding = "2.1"
