[package]
name = "ui"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
default = []
tui = [
  "dep:crossterm",
  "dep:fuzzy-matcher",
  "dep:ratatui",
  "dep:serde_json",
]

[dependencies]
anyhow = "1.0.100"
engine = { path = "../engine" }
clap = { version = "4.5.53", features = ["derive"] }
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = { version = "1.0.148", optional = true }

[dev-dependencies]
insta = "1.44.1"
